// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component renders with definition 1`] = `
<div
  className="app is_detail_page"
>
  <Nav />
  <Breadcrumbs
    show={true}
  />
  <Page
    content={
      <LabwareDetails
        definition={
          Object {
            "brand": Object {
              "brand": "generic",
            },
            "metadata": Object {
              "displayCategory": "wellPlate",
            },
          }
        }
      />
    }
    isDetailPage={true}
    scrollRef={
      Object {
        "current": null,
      }
    }
    sidebar={
      <Sidebar
        filters={
          Object {
            "category": "all",
            "manufacturer": "all",
          }
        }
      />
    }
  />
</div>
`;

exports[`App component renders without definition 1`] = `
<div
  className="app"
>
  <Nav />
  <Breadcrumbs
    show={false}
  />
  <Page
    content={
      <LabwareList
        filters={
          Object {
            "category": "all",
            "manufacturer": "all",
          }
        }
      />
    }
    isDetailPage={false}
    scrollRef={
      Object {
        "current": null,
      }
    }
    sidebar={
      <Sidebar
        filters={
          Object {
            "category": "all",
            "manufacturer": "all",
          }
        }
      />
    }
  />
</div>
`;
